REST call for Token exchange is working. Custom view for talks and speakers are embedded into Fragments. Redesigned info scren with login and licences
