# data/src/main/java/org/dukecon/data/model/OAuthToken.kt
@@ -1,0 +1,3 @@
+package org.dukecon.data.model
+
+data class OAuthToken(val accessToken:String, val refreshToken:String, val valid:Boolean)
